package/main/default/objects/CalloutSigningKey__c/CalloutSigningKey__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Stores private key for signing callout payloads. The signature is used to validate that payloads originated from the Salesforce instance.</description>
    <label>CalloutSigningKey</label>
</CustomObject>