package/main/default/objects/CalloutSigningKey__c/fields/EnsureSingleton__c.field-meta.xml
<CustomField>
    <fullName>EnsureSingleton__c</fullName>
    <description
  >Ensures that there is only one signing key in use.</description>
    <label>EnsureSingleton</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>