package/main/default/objects/CalloutSigningKey__c/fields/PrivateKeySegment0__c.field-meta.xml
<CustomField>
    <fullName>PrivateKeySegment0__c</fullName>
    <description
  >Stores private key. The key is broken up into multiple segments to accommodate the maximum text field length of 255 characters.</description>
    <label>PrivateKeySegment0</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>