package/main/default/objects/CalloutSigningKey__c/fields/PrivateKeySegment2__c.field-meta.xml
<CustomField>
    <fullName>PrivateKeySegment2__c</fullName>
    <description
  >Stores private key. The key is broken up into multiple segments to accommodate the maximum text field length of 255 characters.</description>
    <label>PrivateKeySegment2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>