package/main/default/objects/CalloutSigningKey__c/fields/PublicKeySegment0__c.field-meta.xml
<CustomField>
    <fullName>PublicKeySegment0__c</fullName>
    <description
  >Stores the public key. The key is broken up into multiple segments to accommodate the maximum text field length of 255 characters.</description>
    <label>PublicKeySegment0</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>