package/main/default/objects/CalloutSigningKey__c/fields/PublicKeySegment2__c.field-meta.xml
<CustomField>
    <fullName>PublicKeySegment2__c</fullName>
    <description
  >Stores the public key. The key is broken up into multiple segments to accommodate the maximum text field length of 255 characters.</description>
    <label>PublicKeySegment2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>